wip addressing rigel's comments, assuming getconsumerlag's url is a direct extension of listconsumerlags, trying to figure out how to mock Admin.listConsumerGroupOffsets() for ConsumerGroupLagManagerImplTest
